demo/01-policy-require-mtls-with-istio-1.6-or-later.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: servicemesh-demo
spec:
  mtls:
    mode: STRICT
