demo/01-destination-rule-use-mtls.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: a
spec:
  host: a
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: b
spec:
  host: b
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: c
spec:
  host: c
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: b-db
spec:
  host: b-db
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
