demo/03-simulate-slow-requests.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: b
spec:
  hosts:
    - b
  http:
    - fault:
        delay:
          percent: 50
          fixedDelay: 10s
      route:
        - destination:
            host: b
