demo/04-destinationrule-defining-subsets.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: c
spec:
  host: c
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
    - name: v1
      labels:
        version: "1"
    - name: v2
      labels:
        version: "2"
