demo/04-envoyfilter-x-client-ip.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: ingressgateway-user-ip
  namespace: istio-system
spec:
  workloadLabels:
    app: istio-ingressgateway
  filters:
    - listenerMatch:
        listenerType: ANY
      filterName: envoy.lua
      filterType: HTTP
      filterConfig:
        inlineCode: |
          function envoy_on_request(request_handle)
            local xff_header = request_handle:headers():get("X-Forwarded-For");
            local client_ip
            for ip in  string.gmatch (xff_header, "(%d+.%d+.%d+.%d+)") do
                client_ip = ip
            end
            request_handle:headers():add("x-client-ip", client_ip);
          end
