demo/04-virtualservice-send-all-to-c-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: c
spec:
  hosts:
    - c
  http:
    - route:
        - destination:
            host: c
            subset: v1
