demo/04-virtualservice-send-developer-ip-to-c-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: c
spec:
  hosts:
    - c
  http:
    - match:
        - headers:
            x-client-ip:
              exact: 192.168.137.1
      route:
        - destination:
            host: c
            subset: v2
    - route:
        - destination:
            host: c
            subset: v1
